<resources>
    <string name="app_name">HCI-Prototyp-WS23</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="booked">Booked</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="hi_user">Hi, User</string>
    <string name="number_of_people">Number of people</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="result_list">Result List</string>
    <string name="back">Back</string>
    <string name="rooms">Rooms</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="saved">Saved</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="bookings">Bookings</string>
    <string name="name">NAME</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_addresses">EMAIL ADDRESSES</string>
    <string name="email">Email</string>
    <string name="detail">DETAIL</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="country_region">Country/Region</string>
    <string name="street_address">Street address</string>
    <string name="postal_code">Postal code</string>
    <string name="address">ADDRESS</string>
    <string name="save_changes">Save changes</string>
    <string name="textview">TextView</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="save">Save</string>
    <string name="see_your_room_options">See your room options</string>
    <string name="register_now">Register now</string>
    <string name="register">Register</string>
    <string name="login_now">Login now</string>
    <string name="already_have_an_account_login_now">Already have an account ? Login now</string>
    <string name="log_out">Log out</string>
    <string name="sign_out">Sign out</string>
    <string name="book">Book</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="destination">Destination</string>
    <string name="button">Button</string>
    <string name="booking_confirmed">Booking confirmed!</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="business">Business</string>
    <string name="leisure">Leisure</string>
    <string name="personal_information">Personal information</string>
    <string name="next_step">Next step</string>
    <string name="what_is_the_purpose_of_your_trip">What is the purpose of your trip ?</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="apply_coupons">Apply coupons</string>
    <string name="checkout">Checkout</string>
    <string name="paypal">Paypal</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="giropay">Giropay</string>
    <string name="sepa_lastscrifft">SEPA- Lastscrifft</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="book_now">Book now!</string>
    <string name="username">Username</string>
    <string name="how_do_you_want_to_pay">How do you want to pay ?</string>
    <string name="all">All</string>
    <string name="top_rated">Top Rated</string>
    <string name="best_deals">Best Deals</string>
    <string name="nearby">Nearby</string>
    <string name="top_rated_hotels">Top Rated Hotels</string>
    <string name="cash_on_arrival">Cash (on arrival)</string>
    <string name="serenity_springs_hotel">Serenity Springs Hotel</string>
    <string name="portland_oregon">Portland, Oregon</string>
    <string name="star_hotel">Star Hotel</string>
    <string name="schletterstrasse_13">Schletterstrasse 13,</string>
    <string name="_9064_gonten">9064 Gonten</string>
    <string name="switzerland">Switzerland</string>
    <string name="_59_night">59€/night</string>
    <string name="room">Room</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="adult">Adult</string>
    <string name="children_0_17_years_old">Children (0–17 years old)</string>
    <string name="apply">Apply</string>
    <string name="description">Description</string>
    <string name="payment">Payment</string>
    <string name="rooms_and_guests">Rooms and guests</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="check_in_">Check-in:</string>
    <string name="guests">Guests</string>
    <string name="total">Total</string>
    <string name="spacify">Spacify</string>
</resources>