<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="90dp"
    tools:context=".Fragments.UserProfile">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:id="@+id/user_profile_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icons8_male_user_96"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            android:layout_marginTop="40dp"
            android:contentDescription="user_profile" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_first_name_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_last_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_tv"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_addresses"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/detail_tv"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_mobile_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/mobile_number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_of_birth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_date_of_birth_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:importantForAutofill="no"
                android:hint="@string/date_of_birth" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gray_background"
            android:layout_marginTop="5dp">
            <RadioButton
                android:id="@+id/gender_male_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:text="@string/male" />
            <RadioButton
                android:id="@+id/gender_female_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/gender_other_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/other" />
        </RadioGroup>

        <TextView
            android:id="@+id/address_tv"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_background" >

            <EditText
                android:id="@+id/profile_country_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/country_region" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_city_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/city" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/street_address_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_street_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/street_address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postal_code_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/profile_postal_code_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/postal_code" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_changes_btn"
            android:background="@drawable/rounded_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out_btn"
            android:background="@drawable/rounded_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>