<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/register_login_now_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/already_have_an_account_login_now"
            android:textColor="@color/primaryColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_username_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_password_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_first_name_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_last_name_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_mobile_number_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_date_of_birth_tv"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:importantForAutofill="no"
            android:inputType="datetime"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/register_gender_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" >
            <RadioButton
                android:id="@+id/register_gender_male_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/male" />
            <RadioButton
                android:id="@+id/register_gender_female_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/register_gender_other_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:text="@string/other" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_country_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/country_region"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_city_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_street_address_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/street_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_postal_code_et"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_background"
            android:ems="10"
            android:hint="@string/postal_code"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>